# Website-BeVenus

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  dockerAppConf.yaml  main.py  models.py  pyproject.toml
common/: __init__.py  __settings.py  settings_app.py  settings_gunicorn.py
datebase_sourse/: datebase.py  models.py
gunicorn/: gunicorn.conf.py
resources/static/scripts/: addTask.js
resources/views/: about.tpl  contact.tpl  index.html  index.tpl  todo.html
routes/: routes.py
security/: password.py
