[tool.poetry]
name = "lab 3"
version = "0.1.0"
description = ""
authors = ["triks <triks0001000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bottle = "^0.12.25"
gunicorn = "^21.2.0"
gevent = "^24.2.1"
django-environ = "^0.11.2"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
peewee = "^3.17.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
